--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Bijendra Khadka, Bioinformatics
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Bijendra Khadka!</h1>
-	<p>I'm am genomics and Bioinformatics<em>Bioinformatics</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>I'm am genomics and Bioinformatics<em>Bioinformatics</em> <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
